# twitterclone

./: .gitignore  pyproject.toml
authentication/: forms.py  views.py
notification/: models.py  views.py
notification/migrations/: 0001_initial.py  0002_notification_message.py  0003_notification_user.py
static/: findTags.js  index.css  notify.css
templates/: details.html  index.html  login.html  notifications.html  profile.html
templates/partials/: toolbar.html  tweet.html
tweet/: forms.py  models.py  views.py
tweet/migrations/: 0001_initial.py  0002_tweet_author.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  models.py  views.py
twitteruser/migrations/: 0001_initial.py  0002_auto_20200902_2011.py
