[tool.poetry]
name = "twitterclone"
version = "0.1.0"
description = ""
authors = ["Jordan Haagenson <jdhaagenson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
django = "^3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
